arena fixes